--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,8 +19,8 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
-      "run_at": "document_start",
-      "all_frames": true
+      "run_at": "document_end",
+      "all_frames": false
     }
   ],
   "action": {
