--- a/public/manifest.json
+++ b/public/manifest.json
@@ -35,5 +35,11 @@
     "16": "icons/logo16.png",
     "48": "icons/logo48.png",
     "128": "icons/logo128.png"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/mascot.png"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
